--- a/rasm/logins/panning/index.html
+++ b/rasm/logins/panning/index.html
@@ -15,7 +15,7 @@
         <div class="form">          
           <div style="margin-bottom: 15%; "><span style="text-shadow: 2px 2px #c3c1be;color: white;"></span></div>      
             <span class="close-btn">
-            <img style="width: 100%;" src="img/close.png"></img>
+            <img style="width: 100%;" src="img/close.png"/>
           </span>
           <input type="text" placeholder="username" name="user"><br>
           <input type="password" placeholder="password" name="password"><br>
